--- a/FakeSite/manifest.json
+++ b/FakeSite/manifest.json
@@ -5,8 +5,16 @@
   "description": "This extension displays daily affirmations",
   "version": "1.0",
 
+  "permissions": [
+    "tabs"
+  ],
+
+  "background": {
+    "scripts": ["background.js"]
+  },
+
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon.png"
     "default_popup": "popup.html"
   }
 }
